python/tests/gold/tls/snapshots/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "Host": null,
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": null,
        "TracingService": null,
        "ingresses": null,
        "secret": [
            {
                "apiVersion": "v1",
                "data": {
                    "tls.crt": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURwakNDQW82Z0F3SUJBZ0lKQUpxa1Z4Y1RtQ1FITUEwR0NTcUdTSWIzRFFFQkN3VUFNR2d4Q3pBSkJnTlYKQkFZVEFsVlRNUXN3Q1FZRFZRUUlEQUpOUVRFUE1BMEdBMVVFQnd3R1FtOXpkRzl1TVJFd0R3WURWUVFLREFoRQpZWFJoZDJseVpURVVNQklHQTFVRUN3d0xSVzVuYVc1bFpYSnBibWN4RWpBUUJnTlZCQU1NQ1d4dlkyRnNhRzl6CmREQWVGdzB4T0RFd01UQXhNREk1TURKYUZ3MHlPREV3TURjeE1ESTVNREphTUdneEN6QUpCZ05WQkFZVEFsVlQKTVFzd0NRWURWUVFJREFKTlFURVBNQTBHQTFVRUJ3d0dRbTl6ZEc5dU1SRXdEd1lEVlFRS0RBaEVZWFJoZDJs [...]
                    "tls.key": "LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRQzZ1cHJ2eEN2VDdFK0cKdzdtSWVJUlRsYjI1ejh4TTlJejY3ckxzTlRqU3dUbkRvWnAzRVRhdkxFS3k1UUlMRzZkSnkxWHdtVVhiZkVjagphZ0JjZ1hocUZpcS8zWkFFTnBqNTY5RHc4Z1R2ZUQ4L0U4SzdkSm5TZzBsaFk3S3R2VFdrV1RnWTd2aXFYc3h2CmpZTXl0alBOeFppVms2bDd0dTlEb3ZjbzZIaFFzanR1NlVScUt5blFUa3EyOU1NOTdWbFQ0dk9GUzc2aVJJNUQKZ1ZIOWwrVU1LSjFtY2RpcWxBYy9RRVhsRTkrNlVFV0FRU3lCcUNiUEVqZXE5Y2RmcnJ0eXJ1YWlRcmdYWGg4 [...]
                },
                "kind": "Secret",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"data\":{\"tls.crt\":\"LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURwakNDQW82Z0F3SUJBZ0lKQUpxa1Z4Y1RtQ1FITUEwR0NTcUdTSWIzRFFFQkN3VUFNR2d4Q3pBSkJnTlYKQkFZVEFsVlRNUXN3Q1FZRFZRUUlEQUpOUVRFUE1BMEdBMVVFQnd3R1FtOXpkRzl1TVJFd0R3WURWUVFLREFoRQpZWFJoZDJseVpURVVNQklHQTFVRUN3d0xSVzVuYVc1bFpYSnBibWN4RWpBUUJnTlZCQU1NQ1d4dlkyRnNhRzl6CmREQWVGdzB4T0RFd01UQXhNREk1TURKYUZ3MHlPREV3TURjeE1ESTVNREphTUdneEN6QUpCZ05WQkFZ [...]
                    },
                    "creationTimestamp": "2020-01-10T16:56:01Z",
                    "labels": {
                        "kat-ambassador-id": "tls",
                        "scope": "AmbassadorTest"
                    },
                    "name": "test-tls-secret",
                    "namespace": "default",
                    "resourceVersion": "61004",
                    "selfLink": "/api/v1/namespaces/default/secrets/test-tls-secret",
                    "uid": "14bedee9-33ca-11ea-966c-16b58b03f3a1"
                },
                "type": "kubernetes.io/tls"
            }
        ],
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v0\nkind: Module\nname: tls\nambassador_id: tls\nconfig:\n  server:\n    enabled: True\n    secret: test-tls-secret\n",
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v0\\nkind: Module\\nname: tls\\nambassador_id: tls\\nconfig:\\n  server:\\n    enabled: True\\n    secret: test-tls-secret\\n\"},\"labels\":{\"app.kubernetes.io/component\":\"ambassador-service\",\"kat-ambassador-id\":\"tls\",\"scope\":\"AmbassadorTest\"},\"name\":\"tls\",\"namespace\":\" [...]
                    },
                    "creationTimestamp": "2020-01-10T16:56:00Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "tls",
                        "scope": "AmbassadorTest"
                    },
                    "name": "tls",
                    "namespace": "default",
                    "resourceVersion": "60992",
                    "selfLink": "/api/v1/namespaces/default/services/tls",
                    "uid": "144a1d85-33ca-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.100.127.135",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 32191,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 32447,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "tls"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"tls\",\"scope\":\"AmbassadorTest\",\"service\":\"tls-admin\"},\"name\":\"tls-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"tls-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"service\":\"tls\"},\"type\":\"NodePort\"}}\n"
                    },
                    "creationTimestamp": "2020-01-10T16:56:00Z",
                    "labels": {
                        "kat-ambassador-id": "tls",
                        "scope": "AmbassadorTest",
                        "service": "tls-admin"
                    },
                    "name": "tls-admin",
                    "namespace": "default",
                    "resourceVersion": "60998",
                    "selfLink": "/api/v1/namespaces/default/services/tls-admin",
                    "uid": "1494f11d-33ca-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.101.58.251",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "tls-admin",
                            "nodePort": 30566,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "tls"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v0\nkind: Mapping\nname: tls_target_mapping\nprefix: /tls-target/\nservice: tls-http\nambassador_id: tls\n",
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v0\\nkind: Mapping\\nname: tls_target_mapping\\nprefix: /tls-target/\\nservice: tls-http\\nambassador_id: tls\\n\"},\"labels\":{\"kat-ambassador-id\":\"tls\",\"scope\":\"AmbassadorTest\"},\"name\":\"tls-http\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80, [...]
                    },
                    "creationTimestamp": "2020-01-10T16:56:02Z",
                    "labels": {
                        "kat-ambassador-id": "tls",
                        "scope": "AmbassadorTest"
                    },
                    "name": "tls-http",
                    "namespace": "default",
                    "resourceVersion": "61012",
                    "selfLink": "/api/v1/namespaces/default/services/tls-http",
                    "uid": "152f3e56-33ca-11ea-966c-16b58b03f3a1"
                },
                "spec": {
                    "clusterIP": "10.106.28.92",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8123
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8486
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
